AMP-26400 fix vertical alignment of radio
AMP-26400 fix vertical alignment of radio

--- a/amp/TEMPLATE/reamp/modules/admin/data-freeze-manager/styles/less/main.less
+++ b/amp/TEMPLATE/reamp/modules/admin/data-freeze-manager/styles/less/main.less
@@ -783,3 +783,7 @@ a:hover {
 .date-column{
  width: 20%;
 }
+
+.radio {
+ margin-top:0px !important;
+}
